# Code-Quality-Intelligence-Agent

./: .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  verify_setup.py
ci_scripts/: Jenkinsfile  complete_pr_workflow.md  github_pr_review.py  pr_review_demo.py  quality_gate.sh  real_pr_analysis.py  test_ci_scenarios.sh  webhook_demo.py
ci_scripts/.github/workflows/: code_quality.yml
code_quality_agent/: __init__.py
code_quality_agent/analyzers/: __init__.py  analyzer_registry.py  analyzer_utils.py  base.py  complexity_analyzer.py  documentation_analyzer.py  duplication_analyzer.py  hotspot_analyzer.py  issue_factory.py  performance_analyzer.py  registry_init.py  security_analyzer.py  testing_analyzer.py
code_quality_agent/cli/: __init__.py  hotspot.py  interactive.py  main.py  server.py  validate.py  visualize.py
code_quality_agent/core/: __init__.py  cache_manager.py  config.py  error_handling.py  file_discovery.py  models.py  orchestrator.py
code_quality_agent/llm/: __init__.py  llm_provider.py  llm_service.py  prompt_templates.py
code_quality_agent/parsers/: __init__.py  base.py  javascript_parser.py  python_parser.py  unified_parser.py
code_quality_agent/rag/: __init__.py  qa_engine.py  vector_store.py
code_quality_agent/reporting/: __init__.py  formatters.py  report_generator.py
code_quality_agent/scoring/: __init__.py  business_impact_assessor.py  contextual_scorer.py  scoring_engine.py  severity_classifier.py
code_quality_agent/utils/: file_utils.py  serialization.py  validation.py
code_quality_agent/validation/: __init__.py  accuracy_metrics.py  explanation_validator.py  regression_tester.py  vulnerability_validator.py
code_quality_agent/visualization/: __init__.py  dependency_graph.py  graph_visualizer.py  hotspot_visualizer.py
code_quality_agent/web/: GIT_PLATFORM_INTEGRATION.md  README.md  __init__.py  api.py  app.py  auth.py  ci_cd_examples.py  git_platform_integration.py  github_integration.py  models.py
code_quality_agent/web/frontend/: .env.example  README.md  cypress.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
code_quality_agent/web/frontend/cypress/e2e/: analysis-results.cy.js  chat.cy.js  dashboard.cy.js
code_quality_agent/web/frontend/cypress/support/: commands.js  e2e.js
code_quality_agent/web/frontend/public/: index.html
code_quality_agent/web/frontend/src/: App.js  App.tsx  index.css  main.tsx
code_quality_agent/web/frontend/src/components/: AnalysisResults.js  CodeSnippet.tsx  Header.js  IssueCard.tsx  Layout.tsx  MetricsOverview.tsx  ProgressTracker.js  ProgressTracker.tsx  RecentAnalyses.js
code_quality_agent/web/frontend/src/components/__tests__/: AnalysisResults.test.js  Header.test.js  IssueCard.test.tsx  Layout.test.tsx  ProgressTracker.test.js  ProgressTracker.test.tsx
code_quality_agent/web/frontend/src/contexts/: AnalysisContext.js  WebSocketContext.js
code_quality_agent/web/frontend/src/pages/: Analysis.js  AnalysisPage.tsx  Chat.js  Dashboard.js  HomePage.tsx  NotFoundPage.tsx  QAPage.tsx  ResultsPage.tsx
code_quality_agent/web/frontend/src/pages/__tests__/: HomePage.test.tsx
code_quality_agent/web/frontend/src/services/: api.ts
code_quality_agent/web/frontend/src/test/: setup.ts
code_quality_agent/web/frontend/src/test/e2e/: analysis-flow.test.tsx
docker/: nginx.conf
sample-python/: app.py  models.py  utils.py
test_project/: calculator.py  utils.js
test_qa/: critical_issues.py  performance_issues.py
test_security/: vulnerable_code.py
test_visualization/: main.py
test_visualization/models/: product.py  user.py
test_visualization/services/: product_service.py  user_service.py
test_visualization/utils/: auth.py  database.py
tests/: ACCURACY_VALIDATION_SUMMARY.md  DEPENDENCY_VISUALIZATION_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  SEVERITY_SCORING_SUMMARY.md  __init__.py  test_accuracy_validation.py  test_analyzer_base.py  test_cache_manager.py  test_cli.py  test_complexity_analyzer.py  test_conversation_context.py  test_dependency_graph.py  test_documentation_analyzer.py  test_duplication_analyzer.py  test_enhanced_formatters.py  test_error_handling.py  test_fixtures.py  test_git_integration_simple.py  test_git_platform_integration.py  test_hotspot_analyzer.py  test_hotspot_integration.py  test_hotspot_visualizer.py  test_incremental_analysis.py  test_integration.py  test_interactive_qa.py  test_javascript_parser.py  test_llm_integration.py  test_models.py  test_orchestrator.py  test_performance_analyzer.py  test_python_parser.py  test_qa_engine.py  test_report_generator.py  test_security_analyzer.py  test_severity_scoring.py  test_testing_analyzer.py  test_unified_parser.py  test_utils.py  test_vector_store.py  test_web_api.py
tests/fixtures/: README.md  TASK_COMPLETION_SUMMARY.md  __init__.py  fixture_loader.py  real_world_samples.py  synthetic_samples.py
tests/fixtures/analysis_scenarios/multi_language_project/: README.md
tests/fixtures/analysis_scenarios/multi_language_project/backend/: app.py
tests/fixtures/analysis_scenarios/multi_language_project/config/: config.yaml
tests/fixtures/analysis_scenarios/multi_language_project/frontend/: app.js
tests/fixtures/real_world_samples/: flask_app.py
tests/fixtures/synthetic_samples/: complexity_issues.py  documentation_issues.py  duplication_issues.py  javascript_issues.js  performance_issues.py  security_issues.py  testing_issues.py
